--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -61,13 +61,14 @@ jobs:
     #
     # Installing an Ipso release binary leads to more reliable Nix caching (versus using `nix
     # profile install`). See <https://github.com/LightAndLight/ipso/issues/407>.
-    - run: mkdir -p $HOME/bin
-    - run: >
-        curl -L
-        "https://github.com/LightAndLight/ipso/releases/download/$CI_IPSO_VERSION/ipso-linux-x86_64"
-        > $HOME/bin/ipso
-    - run: chmod +x $HOME/bin/ipso
-    - run: echo "$HOME/bin" >> $GITHUB_PATH
+    - name: Install Ipso binary
+      run: |
+        mkdir -p $HOME/bin
+        curl -L \
+          "https://github.com/LightAndLight/ipso/releases/download/$CI_IPSO_VERSION/ipso-linux-x86_64" \
+          > $HOME/bin/ipso
+        chmod +x $HOME/bin/ipso
+        echo "$HOME/bin" >> $GITHUB_PATH
 
     - run: nix profile install nixpkgs#pueue
 
