build: allow manual running of build pipeline

--- a/.github/workflows/ipso-cli.yml
+++ b/.github/workflows/ipso-cli.yml
@@ -5,6 +5,7 @@ on:
       - main
     tags:
       - "v*"
+  workflow_dispatch:
 env:
   NIX_PUBLIC_KEY: "ipso-binary-cache-1:UMRLNOKcCsb/a2dBhtcZhRZP4RN8yIDsSUwHTObu2w4="
 
