--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -38,8 +38,8 @@ jobs:
     - name: "tests"
       if: github.event_name == 'pull_request'
       run: |
-        export CARGO_HOME=/var/cache/github-runner/.cargo
-        export CARGO_TARGET_DIR=$(realpath --relative-to "$PWD" /var/cache/github-runner/target)
+        export CARGO_HOME=$STATE_DIRECTORY/.cargo
+        export CARGO_TARGET_DIR=$(realpath --relative-to "$PWD" $STATE_DIRECTORY/target)
         nix develop .#tests \
           --post-build-hook "$RUNNER_TEMP/postBuildHook-$GITHUB_RUN_ID-$GITHUB_RUN_NUMBER" \
           -c ./scripts/recheck origin/$GITHUB_BASE_REF $GITHUB_REF_NAME
